--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,13 @@ body {
     font-family: "Poppins";
 }
 
+/* ############################### NAVBAR START ############################## */
+
 header {
     display: flex;
     justify-content: space-between;
     padding: 2rem;
+    padding-bottom: 1.5rem;
     max-width: 1400px;
     margin: 0 auto;
 }
@@ -30,10 +33,17 @@ header {
 header ul {
     list-style: none;
     display: flex;
-    gap: 4rem;
+    gap: 3rem;
 }
 
 a {
     text-decoration: none;
     color: black;
 }
+
+.socials {
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+}
+/* ############################### NAVBAR ENDS ############################## */
