--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500;600;700;800&display=swap');
 
 * {
     margin: 0;
@@ -9,6 +10,8 @@
 .wrapper {
     max-width: 1400px;
     margin: 0 auto;
+    padding-left: 3rem;
+    padding-right: 3rem;
 }
 
 body {
@@ -47,3 +50,28 @@ a {
     align-items: center;
 }
 /* ############################### NAVBAR ENDS ############################## */
+
+
+.section-title {
+    text-align: center;
+    font-family: 'Inconsolata';
+    width: 76%;
+    margin: 2rem auto;
+    margin-top: 80px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding-bottom: 1rem;
+    border-bottom: 3px solid #000;
+}
+
+.about-content {
+    text-align: center;
+    width: 65%;
+    margin: 0 auto;
+}
+
+.about-content p {
+    font-size: 1rem;
+    line-height: 1.8rem;
+    margin-top: 0.5rem;
+}
