--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@ a {
 }
 /* ############################### ABOUT ENDS ############################## */
 
+/* ############################### EXP1 START ############################## */
 .exp-content {
     width: 76%;
     margin: 0 auto;
@@ -113,4 +114,24 @@ a {
 .flex-container {
     display: flex;
     justify-content: space-between;
+}
+/* ############################### EXP1 ENDS ############################## */
+
+/* ############################### EXP2 START ############################## */
+.exp-content-2 {
+    width: 76%;
+    margin: 0 auto;
+    margin-top: 3rem;
+}
+
+.ivy-logo {
+    width: 120px;
+    margin-right: 2rem;
+}
+/* ############################### EXP2 END ############################## */
+
+.kaggle-logo {
+    width: 120px;
+    height: 120px;
+    margin-right: 2rem;
 }
